--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -2,7 +2,17 @@
 layout: page
 permalink: /docs/
 title: Documentation
+no_header: true
 ---
+
+{{ site.docs.permalink }}
+
+<header class="docs-header" >
+	<h1>
+    <a href="{{ page.url }}">{{ page.title }}</a>
+    <span class="docs-version">{{ site.version }}</span>
+  </h1>
+</header>
 
 <h2>Guides</h2>
 
