--- a/_pages/index.html
+++ b/_pages/index.html
@@ -23,7 +23,7 @@ permalink: /
       <script>
       	var term = new Terminal();
         term.open(document.getElementById('#terminal'));
-        term.write('Hello from xterm.js $ ')
+        term.write('Hello from \033[1;3;31mxterm.js\033[0m $ ')
       </script>
     </body>
   </html>
