Document `loadAddon` and add guide for using addons

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -21,3 +21,6 @@ no_header: true
 <h2>API Reference</h2>
 
 {% include docs-categoty-article-list.html category="API" %}
+
+<h3>Addons</h3>
+{% include docs-categoty-article-list.html category="addon" %}
