Generate docs for addons

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -18,13 +18,11 @@ no_header: true
 {% include docs-category-article-list.html category="Guides" %}
 
 <h2>API Reference</h2>
-{% include docs-category-article-list.html category="API" %}
 <h4>Modules</h4>
-{% include docs-category-article-list.html category="API-modules" %}
+{% include docs-category-article-list.html category="terminal-modules" %}
 <h4>Classes</h4>
-{% include docs-category-article-list.html category="API-classes" %}
+{% include docs-category-article-list.html category="terminal-classes" %}
 <h4>Interfaces</h4>
-{% include docs-category-article-list.html category="API-interfaces" %}
-
+{% include docs-category-article-list.html category="terminal-interfaces" %}
 <h4>Addons</h4>
-{% include docs-category-article-list.html category="addon" %}
+{% include docs-category-article-list.html category="addons-modules" %}
