Update the getting started section of index.html
Fixes #48

Including markdown doesn't work as expected: https://github.com/jekyll/jekyll/issues/1303

Unsupported: `{% include document.md | markdownify %}`

Supported:

```
{% capture some_doc %}{% include document.md %}{% endcapture %}
{% some_doc | markdownify %}
````

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -10,22 +10,6 @@ permalink: /
     {{ about | markdownify }}
   </article>
 
-  <h2>Quick start</h2>
-  {% highlight html %}
-  <!doctype html>
-  <html>
-    <head>
-      <link rel="stylesheet" href="bower_components/xterm.js/dist/xterm.css" />
-      <script src="bower_components/xterm.js/dist/xterm.js"></script>
-    </head>
-    <body>
-      <div id="terminal"></div>
-      <script>
-      	var term = new Terminal();
-        term.open(document.getElementById('#terminal'));
-        term.write('Hello from \033[1;3;31mxterm.js\033[0m $ ')
-      </script>
-    </body>
-  </html>
-  {% endhighlight %}
+  {% capture getting_started %}{% include getting-started.md %}{% endcapture %}
+  {{ getting_started | markdownify }}
 </div>
