Display add-on docs using marked

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -18,7 +18,6 @@ no_header: true
 {% include docs-category-article-list.html category="Guides" %}
 
 <h2>API Reference</h2>
-{% include docs-category-article-list.html category="API" %}
 <h4>Modules</h4>
 {% include docs-category-article-list.html category="API-modules" %}
 <h4>Classes</h4>
@@ -26,5 +25,5 @@ no_header: true
 <h4>Interfaces</h4>
 {% include docs-category-article-list.html category="API-interfaces" %}
 
-<h4>Addons</h4>
-{% include docs-category-article-list.html category="addon" %}
+<h2>Addons</h2>
+{% include docs-category-article-list.html category="addons" %}
