Raise getting-started above real-world-uses

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -12,4 +12,7 @@ permalink: /
 
   {% capture getting_started %}{% include getting-started.md %}{% endcapture %}
   {{ getting_started | markdownify }}
+
+  {% capture real_world_uses %}{% include real-world-uses.md %}{% endcapture %}
+  {{ real_world_uses | markdownify }}
 </div>
