generate md file, hook into page

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -18,6 +18,7 @@ no_header: true
 {% include docs-category-article-list.html category="Guides" %}
 
 <h2>API Reference</h2>
+<h4><a href="{{ site.baseurl }}{% link _docs/api/vtfeatures.md %}">List of Supported Terminal Sequences</a></h4>
 {% include docs-category-article-list.html category="API" %}
 <h4>Modules</h4>
 {% include docs-category-article-list.html category="API-modules" %}
