Add npm install with copy button

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -12,6 +12,11 @@ permalink: /
   <div class="description">
     <p>Build terminals in the browser</p>
   </div>
+
+  <div class="npm-install">
+    <div class="text">npm install xterm</div>
+    <button class="copy" title="Copy to clipboard">Copy</div>
+  </div>
   
   <article>
     {% capture about %}{% include xtermjs-description.md %}{% endcapture %}
