Implement copy button

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -15,7 +15,7 @@ permalink: /
 
   <div class="npm-install">
     <div class="text">npm install xterm</div>
-    <button class="copy" title="Copy to clipboard">Copy</div>
+    <button class="copy" title="Copy to clipboard" onclick="navigator.clipboard.writeText('npm install xterm'); document.querySelector('.copy').textContent = '\u2713'">Copy</div>
   </div>
   
   {% include demo.html %}
