--- a/_pages/index.html
+++ b/_pages/index.html
@@ -17,13 +17,12 @@ permalink: /
     <div class="text">npm install xterm</div>
     <button class="copy" title="Copy to clipboard" onclick="navigator.clipboard.writeText('npm install xterm'); document.querySelector('.copy').textContent = '\u2713'">Copy</div>
   </div>
-  
+
   {% include demo.html %}
 
   {% capture getting_started %}{% include getting-started.md %}{% endcapture %}
   {{ getting_started | markdownify }}
 
-  {% capture real_world_uses %}{% include real-world-uses.md %}{% endcapture %}
-  {{ real_world_uses | markdownify }}
+  {% include real-world-uses.html %}
 
 </div>
