--- a/_pages/index.html
+++ b/_pages/index.html
@@ -14,8 +14,8 @@ permalink: /
   </div>
 
   <div class="npm-install">
-    <div class="text">npm install xterm</div>
-    <button class="copy" title="Copy to clipboard" onclick="navigator.clipboard.writeText('npm install xterm'); document.querySelector('.copy').textContent = '\u2713'">Copy</div>
+    <div class="text">npm install @xterm/xterm</div>
+    <button class="copy" title="Copy to clipboard" onclick="navigator.clipboard.writeText('npm install @xterm/xterm'); document.querySelector('.copy').textContent = '\u2713'">Copy</div>
   </div>
 
   {% include demo.html %}
