Add x2 logo to website

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -6,7 +6,7 @@ permalink: /
 <div class="home">
 
   <div class="logo">
-    <img src="/images/logo-full.png">
+    <img src="/images/logo-full.png" srcset="/images/logo-full.png 1x, /images/logo-full-x2.png 2x">
   </div>
 
   <div class="description">
